samples/_failures_safe/1761554884_f79d07_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_872f2f63.c: In function ‘main’:
./samples/SAFE/__tmp_872f2f63.c:160:19: error: ‘mat’ undeclared (first use in this function); did you mean ‘mat2’?
  160 |     print_matrix(&mat
      |                   ^~~
      |                   mat2
./samples/SAFE/__tmp_872f2f63.c:160:19: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_872f2f63.c:160:22: error: expected ‘)’ at end of input
  160 |     print_matrix(&mat
      |                 ~    ^
      |                      )
./samples/SAFE/__tmp_872f2f63.c:160:5: error: expected declaration or statement at end of input
  160 |     print_matrix(&mat
      |     ^~~~~~~~~~~~
